After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753170 - Settings updates not received
Settings updates not received
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: plugins
3.17.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on: 753155
Blocks:
 
 
Reported: 2015-08-03 08:36 UTC by Bastien Nocera
Modified: 2015-11-12 10:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
wacom: Read settings after connecting to changed:: (1.28 KB, patch)
2015-08-03 12:23 UTC, Carlos Garnacho
accepted-commit_now Details | Review
xsettings: Read settings after connecting to changed:: (1.49 KB, patch)
2015-08-03 12:23 UTC, Carlos Garnacho
accepted-commit_now Details | Review
datetime: Read settings after connecting to changed:: (1.24 KB, patch)
2015-08-03 12:23 UTC, Carlos Garnacho
accepted-commit_now Details | Review

Description Bastien Nocera 2015-08-03 08:36:55 UTC
+++ This bug was initially created as a clone of Bug #753155 +++

Screen lock is currently not handled by the orientation plugin as it does not receive any changed:: notification. This is caused by not reading the variable after connecting the signal as listed in the documentation:

https://bugzilla.gnome.org/show_bug.cgi?id=750257


This also happens in:
- datetime
- keyboard
- media-keys
- wacom
- xsettings
Comment 1 Carlos Garnacho 2015-08-03 12:23:31 UTC
Created attachment 308672 [details] [review]
wacom: Read settings after connecting to changed::

According to GSettings docs, one must read after connecting to changed::
in order to ensure the handler will trigger in the future.
Comment 2 Carlos Garnacho 2015-08-03 12:23:36 UTC
Created attachment 308673 [details] [review]
xsettings: Read settings after connecting to changed::

According to GSettings docs, one must read after connecting to changed::
in order to ensure the handler will trigger in the future.
Comment 3 Carlos Garnacho 2015-08-03 12:23:41 UTC
Created attachment 308674 [details] [review]
datetime: Read settings after connecting to changed::

According to GSettings docs, one must read after connecting to changed::
in order to ensure the handler will trigger in the future.
Comment 4 Carlos Garnacho 2015-08-03 12:26:23 UTC
From my inspection, the other appearances do things in the right order.
Comment 5 Bastien Nocera 2015-08-03 13:28:43 UTC
Review of attachment 308672 [details] [review]:

Looks good.
Comment 6 Bastien Nocera 2015-08-03 13:29:26 UTC
Review of attachment 308673 [details] [review]:

Yes.
Comment 7 Bastien Nocera 2015-08-03 13:29:56 UTC
Review of attachment 308674 [details] [review]:

Looks good.
Comment 8 Bastien Nocera 2015-08-03 13:33:33 UTC
I double checked the other plugins, and it seems that they're not affected as you said in comment 4.
Comment 9 Carlos Garnacho 2015-08-03 15:49:37 UTC
Attachment 308672 [details] pushed as 32b99b1 - wacom: Read settings after connecting to changed::
Attachment 308673 [details] pushed as 76dd2fc - xsettings: Read settings after connecting to changed::
Attachment 308674 [details] pushed as 946c3a9 - datetime: Read settings after connecting to changed::
Comment 10 Atri 2015-11-12 10:38:41 UTC
Is there going to be a 3.16.4 release any time soon (with these commits included)? I ask because we were planning to do a maintenance release for openSUSE Leap 42.1 which ships GNOME 3.16 to bring all the GNOME apps to their latest upstream 3.16 states, and g-s-d has seen a few fixes since its last 3.16.3 release.
Thanks!