wacom: Read settings after connecting to changed::

According to GSettings docs, one must read after connecting to changed::
in order to ensure the handler will trigger in the future.

https://bugzilla.gnome.org/show_bug.cgi?id=753170